--- a/assets/css/header-resize.css
+++ b/assets/css/header-resize.css
@@ -179,7 +179,10 @@ header {
       line-height: 75px;
       font-size: 30px; }
     header.smaller nav a {
+      /*
       line-height: 75px; }
+      */
+      line-height: 32px;
 
 /* =Footer
 -------------------------------------------------------------- */
